src/main/resources/templates/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {name}-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      tackle: {name}
  template:
    metadata:
      labels:
        app: keycloak
        tackle: {name}
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:12.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/auth"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/auth"
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
#          volumeMounts:
#            - name: realm-config
#              mountPath: /tmp/realm.json
#              subPath: realm.json
#              readOnly: true
#      volumes:
#        - name: realm-config
#          configMap:
#            name: {name}-keycloak
#            items:
#              - key: realm.json
#                path: realm.json
