src/main/resources/templates/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {name}-keycloak
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: keycloak
    tackle: {name}
