src/main/resources/templates/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: {name}-keycloak
  annotations:
    "console.alpha.openshift.io/overview-app-route": true
spec:
  rules:
    - host: {name}-keycloak{host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: {name}-keycloak
                port:
                  number: 8080
